--- a/trunk/templates/bkp/list_computers.html
+++ b/trunk/templates/bkp/list_computers.html
@@ -1,35 +1,6 @@
-<!-- Begin Header -->
-	<h1> <a href="{{script_name}}/">Protótipo Backup Corporativo</a> </h1>
-	<hr />
-<!-- End Header -->
-
-<!-- Welcome -->
-
-<ul><form class="link" action="{{script_name}}/session/delete" method="post">
-<li>Welcome, {{current_user.username}} | <button type="submit">Sair</button> | 
-</li></form>
-</ul>
-
-<!-- End Welcome -->
-
-<!-- Begin Computers -->
-	<h2>Computadores</h2>
-	
-	{% if comps %}
-	<ul>
-	{% for c in comps %}
-		<form class="link" action="{{script_name}}/computer/{{c.id}}/delete" method="post">
-		<li><a href="{{script_name}}/computer/{{c.id}}">{{ c.computer_name }}</a> | {{ c.ip }} | {{ c.description }} |  
-		{{ c.fd_password }} | <a href="{{script_name}}/computer/{{c.id}}/edit">Alterar</a> | 
-	    <button type="submit">Remover</button> |
-		</li></form>
-	{% endfor %}
-	</ul>
-	{% else %}
-	<p>Não há computadores disponíveis.</p>
-	{% endif %}
-	
-	<hr />
+{% extends "bkp/base.html" %}
+{% load bkp_extras %}
+{% block content %}
 <!--  Expandable/Collapsible Area -->
 	<h3>Adicionar Computador</h3>
 	
@@ -37,11 +8,11 @@
     {% for field in compform %}
         <div class="fieldWrapper">
             {{ field.errors }}
-            {{ field.label_tag }}: {{ field }}
+            {{ field.label_tag }} {{ field }}
         </div>
     {% endfor %}
     <p><input type="submit" value="Salvar" /></p>
 </form>
 
-	<hr />
 <!-- End Computers -->
+{% endblock %}
