--- a/trunk/templates/bkp/base.html
+++ b/trunk/templates/bkp/base.html
@@ -7,7 +7,7 @@
 
 		<title>{% block title %}{% endblock %} Backup corporativo</title>
 
-		<link href="{{ request.META.SCRIPT_NAME }}/static/estilo.css" rel="stylesheet" />
+		<link href="{{ script_name }}/static/estilo.css" rel="stylesheet" />
 	</head>
 	<body>
 		<div id="site">
