--- a/trunk/templates/bkp/edit_config.html
+++ b/trunk/templates/bkp/edit_config.html
@@ -1,16 +1,5 @@
-<!-- Begin Header -->
-	<h1> <a href="{{script_name}}/">Protótipo Backup Corporativo</a> </h1>
-	<hr />
-<!-- End Header -->
-
-<!-- Welcome -->
-
-<ul><form class="link" action="{{script_name}}/session/delete" method="post">
-<li>Welcome, {{current_user.username}} | <button type="submit">Sair</button> | 
-</li></form>
-</ul>
-
-<!-- End Welcome -->
+{% extends "bkp/base.html" %}
+{% block content %}
 
 
 <!--  Begin Global Config -->
@@ -43,3 +32,5 @@
 	<hr />
 
 <!--  End Global Config -->
+
+{% endblock %}
