--- a/trunk/templates/bkp/new_session.html
+++ b/trunk/templates/bkp/new_session.html
@@ -1,7 +1,5 @@
-<!-- Begin Header -->
-	<h1> <a href="{{script_name}}/">Protótipo Backup Corporativo</a> </h1>
-	<hr />
-<!-- End Header -->
+{% extends "bkp/base.html" %}
+{% block content %}
 
 <!-- Begin Login -->
 <h2>Login</h2>
@@ -18,3 +16,5 @@
 
 
 <!-- End Login -->
+
+{% endblock %}
