--- a/trunk/templates/bkp/base.html
+++ b/trunk/templates/bkp/base.html
@@ -15,7 +15,7 @@
                             <h1><a href="{{ script_name }}" title="Home">Linconet - Tencnologia Estratégica</a></h1>
                             <div id="main_menu" class="menu">
                                 <ul class="links">
-                                    <li class="first"><a href="{{ script_name }}/backup" title="">Backup</a></li>
+                                    <li class="first"><a href="{{ script_name }}/backup/new" title="">Backup</a></li>
                                     <li class=""><a href="{{ script_name }}/stats" title="">Estatísticas</a></li>
                                 </ul>
                             </div>
