--- a/trunk/templates/bkp/new_backup.html
+++ b/trunk/templates/bkp/new_backup.html
@@ -57,6 +57,9 @@
         </div>
     {% endfor %}
 
+    {% for field in compauxform %}
+		{{ field }}
+    {% endfor %}
 
     <p><input type="submit" value="Salvar" /></p>
 </form>
