--- a/trunk/templates/bkp/new_backup.html
+++ b/trunk/templates/bkp/new_backup.html
@@ -48,9 +48,9 @@
 
 	<hr />
 
-	<h3>Detalhes Agendamento {{ sched.type }}</h3>
+	<h3>Detalhes Agendamento</h3>
 
-    {% for field in wtriggform %}
+    {% for field in mtriggform %}
         <div class="fieldWrapper">
             {{ field.errors }}
             {{ field.label_tag }} {{ field }}
