+ Added change password functionality + Added BandwidthRestriction model + Changed minor things in templates

--- a/trunk/templates/bkp/new_password.html
+++ b/trunk/templates/bkp/new_password.html
@@ -2,9 +2,10 @@
 
 {% block content %}
 <hr />
+<h3>Alterar Senha do Administrador</h3>
 
-<form action="{{script_name}}/device/create" method="post">
-    {% for field in devform %}
+<form action="{{script_name}}/password/change" method="post">
+    {% for field in pwdform %}
         <div class="fieldWrapper">
             {{ field.errors }}
             {{ field.label_tag }} {{ field }}
