--- a/trunk/templates/bkp/view_schedule.html
+++ b/trunk/templates/bkp/view_schedule.html
@@ -22,7 +22,7 @@
     {% for field in compform %}
         <div class="fieldWrapper">
             {{ field.errors }}
-            {{ field.label_tag }}: {{ field }}
+            {{ field.label_tag }} {{ field }}
         </div>
     {% endfor %}
     <p><input type="submit" value="Salvar" /></p>
@@ -52,7 +52,7 @@
     {% for field in procform %}
         <div class="fieldWrapper">
             {{ field.errors }}
-            {{ field.label_tag }}: {{ field }}
+            {{ field.label_tag }} {{ field }}
         </div>
     {% endfor %}
     <p><input type="submit" value="Salvar" /></p>
@@ -84,7 +84,7 @@
     {% for field in fsetform %}
         <div class="fieldWrapper">
             {{ field.errors }}
-            {{ field.label_tag }}: {{ field }}
+            {{ field.label_tag }} {{ field }}
         </div>
     {% endfor %}
     <p><input type="submit" value="Salvar" /></p>
@@ -117,7 +117,7 @@
     {% for field in schedform %}
         <div class="fieldWrapper">
             {{ field.errors }}
-            {{ field.label_tag }}: {{ field }}
+            {{ field.label_tag }} {{ field }}
         </div>
     {% endfor %}
     <p><input type="submit" value="Salvar" /></p>
@@ -138,7 +138,7 @@
     {% for field in triggerform %}
         <div class="fieldWrapper">
             {{ field.errors }}
-            {{ field.label_tag }}: {{ field }}
+            {{ field.label_tag }} {{ field }}
         </div>
     {% endfor %}
 
