--- a/trunk/templates/bkp/edit_procedure.html
+++ b/trunk/templates/bkp/edit_procedure.html
@@ -9,7 +9,7 @@
     {% for field in procform %}
         <div class="fieldWrapper">
             {{ field.errors }}
-            {{ field.label_tag }}: {{ field }}
+            {{ field.label_tag }} {{ field }}
         </div>
     {% endfor %}
     <p><input type="submit" value="Salvar" /></p>
