--- a/trunk/templates/bkp/edit_config.html
+++ b/trunk/templates/bkp/edit_config.html
@@ -14,7 +14,7 @@
     {% for field in gconfigform %}
         <div class="fieldWrapper">
             {{ field.errors }}
-            {{ field.label_tag }}: {{ field }}
+            {{ field.label_tag }} {{ field }}
         </div>
     {% endfor %}
     <p><input type="submit" value="Salvar" /></p>
@@ -34,6 +34,8 @@
 <p><input type="submit" value="Restore" /></p>
 </form>
 
+
+<a href="{{script_name}}/password/new">Alterar Senha</a>
 
 	<hr />
 
