--- a/trunk/templates/bkp/edit_procedure.html
+++ b/trunk/templates/bkp/edit_procedure.html
@@ -15,7 +15,7 @@
     <p><input type="submit" value="Salvar" /></p>
 </form>
 
-<a href="{{script_name}}/computer/{{comp.id}}/procedure/{{proc.id}}">Cancelar</a>
+<a href="{{script_name}}/computer/{{comp.id}}">Cancelar</a>
 <br />
 
 {% endblock %}
