--- a/trunk/templates/bkp/new_backup.html
+++ b/trunk/templates/bkp/new_backup.html
@@ -1,7 +1,7 @@
 {% extends "bkp/base.html" %}
 
 {% block content %}
-<h2>Add computer</h2>
+<h2>Adicionar Computador</h2>
 
 <form action="{{script_name}}/backup/create" method="post">
 	<h3>Detalhes Computador</h3>
