--- a/trunk/templates/bkp/base.html
+++ b/trunk/templates/bkp/base.html
@@ -12,11 +12,12 @@
 	<body>
 		<div id="site">
 			<div id="topo">
-                            <h1><a href="{{ script_name }}" title="Home">Linconet - Tencnologia Estratégica</a></h1>
+                            <h1><a href="{{script_name}}/" title="Home">Linconet - Tencnologia Estratégica</a></h1>
                             <div id="main_menu" class="menu">
                                 <ul class="links">
-                                    <li class="first"><a href="{{ script_name }}/backup/new" title="">Backup</a></li>
-                                    <li class=""><a href="{{ script_name }}/stats" title="">Estatísticas</a></li>
+                                    <li class="first"><a href="{{script_name}}/backup/new" title="">Backup</a></li>
+                                    <li class=""><a href="{{script_name}}/stats" title="">Estatísticas</a></li>
+                                    <li class=""><a href="{{script_name}}/config/edit" title="">Configurações</a></li>
                                 </ul>
                             </div>
 			</div>
@@ -41,7 +42,7 @@
 						{% endifequal %}
 						{% endfor %}
 					</ul>
-					<p><a href="/backup/new">Adicionar computador</a></p>
+					<p><a href="{{script_name}}/backup/new">Adicionar computador</a></p>
 					{% endblock %}
 					<!-- end computers block -->
 				</div>
