--- a/trunk/templates/bkp/new_password.html
+++ b/trunk/templates/bkp/new_password.html
@@ -4,7 +4,7 @@
 <hr />
 <h3>Alterar Senha do Administrador</h3>
 
-<form action="{{script_name}}/password/change" method="post">
+<form action="{{script_name}}/password/" method="post">
     {% for field in pwdform %}
         <div class="fieldWrapper">
             {{ field.errors }}
