--- a/trunk/templates/bkp/new_restriction.html
+++ b/trunk/templates/bkp/new_restriction.html
@@ -16,7 +16,7 @@
 
 <br />
 <h3>Adicionar Nova Restrição</h3>
-<form action="{{script_name}}/restriction/create" method="post">
+<form action="{{script_name}}/restriction/" method="post">
     {% for field in restform %}
         <div class="fieldWrapper">
             {{ field.errors }}
