--- a/trunk/templates/bkp/new_device.html
+++ b/trunk/templates/bkp/new_device.html
@@ -5,13 +5,20 @@
 
 
 <form action="{{script_name}}/device/create" method="post">
-    {% for field in devform %}
-        <div class="fieldWrapper">
-            {{ field.errors }}
-            {{ field.label_tag }} {{ field }}
-        </div>
-    {% endfor %}
+    <div class="fieldWrapper">
+        {{ devform.device_name.errors }}
+        {{ devform.device_name.label_tag }} {{ devform.device_name }}
+    </div>
 
+    <div class="fieldWrapper">
+        {{ devform.uuid.errors }}
+		{{ devform.uuid.label_tag }}	
+		<select name="uuid" id="id_uuid">
+			{% for value,choice in dev_choices %}
+			<option value="{{value}}" selected="selected">{{choice}}</option>
+			{% endfor %}
+		</select>
+    </div>
     <p><input type="submit" value="Salvar" /></p>
 </form>
 
