--- a/trunk/templates/bkp/static/estilo.css
+++ b/trunk/templates/bkp/static/estilo.css
@@ -205,6 +205,11 @@ color: #333;
 float: right;
 }
 
+.bloco_texto .titulo_topo .botao_acoes button,
+.bloco_texto .titulo_topo .botao_acoes form {
+float: left;
+margin-left: 3px;
+}
 
 .fieldWrapper {
 padding: 5px;
@@ -238,6 +243,7 @@ padding: 10px;
 margin-top: 20px;
 color: #999;
 }
+
 
 
 
