--- a/trunk/templates/bkp/view_computer.html
+++ b/trunk/templates/bkp/view_computer.html
@@ -8,8 +8,8 @@
 	        {{ comp.computer_name }}
 	    </h2>
 	    <div class="botao_acoes">
-	        <button><span class="">Editar</span></button>
-	        <button><span class="">Remover</span></button>
+	        <button onclick="location.href='{{script_name}}/{{comp.edit_url}}'"><span>Editar</span></button>
+	        <button><span>Remover</span></button>
 	    </div>
 	</div>
 	
@@ -29,19 +29,25 @@
 	    </div>
 	</div>
 	<div class="bloco_texto">
+	{% if not comp.procedure_set.count %}
+	    <span>Não existem procedimentos cadastrados para este computador.</span>
+	{% endif %}
     {% for p in comp.procedure_set.all %}
         <div class="procedure">
             <div class="titulo_topo">
                 <h3><strong>{{ p.procedure_name }}</strong></h3>
                 <div class="botao_acoes">
 	                <button onclick="location.href='{{script_name}}/{{p.edit_url}}'"><span>Alterar</span></button>
+	                <form action="{{script_name}}/{{p.delete_url}}" method="post">
+	                    <button type="submit"><span>Remover</span></button>
+	                </form>
 	            </div>
 	        </div>
 	        <ul class="aux">
-	            <li><strong class="label">Caminho para recuperação:</strong> <span class="value">{{ p.restore_path }}</span></li>
-	            <li><strong class="label">Caminhos do backup:</strong> <span class="value">{% for fs in p.fileset_set.all %}{{ fs.path }}{% endfor %}</span></li>
+	            <li><span class="label">Caminho para recuperação:</span> <span class="value">{{ p.restore_path }}</span></li>
+	            <li><span class="label">Caminhos do backup:</span> <span class="value">{% for fs in p.fileset_set.all %}{{ fs.path }}{% endfor %}</span></li>
 	            <li>
-	                <strong class="label">Agendamentos:</strong>
+	                <span class="label">Agendamentos:</span>
 	                {% for sc in p.schedule_set.all %}
 	                <span class="value">
 	                    Tipo: {{ sc.type }}
