--- a/trunk/templates/bkp/view_computer.html
+++ b/trunk/templates/bkp/view_computer.html
@@ -9,7 +9,9 @@
 	    </h2>
 	    <div class="botao_acoes">
 	        <button onclick="location.href='{{script_name}}/{{comp.edit_url}}'"><span>Editar</span></button>
-	        <button><span>Remover</span></button>
+	        <form action="{{script_name}}/{{comp.delete_url}}" method="post">
+                <button type="submit"><span>Remover</span></button>
+            </form>
 	    </div>
 	</div>
 	
@@ -44,7 +46,7 @@
 	            </div>
 	        </div>
 	        <ul class="aux">
-	            <li><span class="label">Caminho para recuperação:</span> <span class="value">{{ p.restore_path }}</span></li>
+	            <!--li><span class="label">Caminho para recuperação:</span> <span class="value">{{ p.restore_path }}</span></li-->
 	            <li><span class="label">Caminhos do backup:</span> <span class="value">{% for fs in p.fileset_set.all %}{{ fs.path }}{% endfor %}</span></li>
 	            <li>
 	                <span class="label">Agendamentos:</span>
