--- a/trunk/templates/bkp/edit_config.html
+++ b/trunk/templates/bkp/edit_config.html
@@ -1,50 +1,55 @@
 {% extends "bkp/base.html" %}
 {% block content %}
 
+<ul class="aux menu_horizontal config">
+    <li><a href="/config/global/edit"{% ifequal config_type 'global' %} class="ativo"{% endifequal %}>Configurações globais</a></li>
+    <li><a href="/config/dump_restore/edit"{% ifequal config_type 'dump_restore' %} class="ativo"{% endifequal %}>Dump e restauração</a></li>
+    <li><a href="/config/password/edit"{% ifequal config_type 'password' %} class="ativo"{% endifequal %}>Senha</a></li>
+</ul>
 
-<!--  Begin Global Config -->
-	<h2>Configurações Globais</h2>
-
-{% if gconfig %}
-{% else %}
-<h3>Por favor, defina as configurações iniciais do seu sistema.</h3>
+{% if not gconfig %}
+    <h3>Por favor, defina as configurações iniciais do seu sistema.</h3>
 {% endif %}
 
-<form action="{{script_name}}/config/edit" method="post">
-    {% for field in gconfigform %}
-        <div class="fieldWrapper">
-            {{ field.errors }}
-            {{ field.label_tag }} {{ field }}
-        </div>
-    {% endfor %}
-    <p><input type="submit" value="Salvar" /></p>
-</form>
-<br />
-<h2>Gerar Dump do Sistema</h2>
+{% ifequal config_type 'global' %}
+	    <h2>Configurações Globais</h2>
 
-<form action="{{script_name}}/dump/create" method="post">
-<p><input type="submit" value="Dump" /></p>
-</form>
-<br />
+    <form action="{{script_name}}/config/edit" method="post">
+        {% for field in gconfigform %}
+            <div class="fieldWrapper">
+                {{ field.errors }}
+                {{ field.label_tag }} {{ field }}
+            </div>
+        {% endfor %}
+        <p><input type="submit" value="Salvar" /></p>
+    </form>
+{% endifequal %}
 
-<h2>Restaurar Sistema</h2>
-<form action="{{script_name}}/dump/restore" method="post" enctype="multipart/form-data">
-	{% for field in restoredumpform %}
-		<div class="fieldWrapper">
-            {{ field.errors }}
-            {{ field.label_tag }}: {{ field }}
-        </div>
-	{% endfor %}
+{% ifequal config_type 'dump_restore' %}
+    <h2>Gerar Dump do Sistema</h2>
 
-<p><input type="submit" value="Restore" /></p>
-</form>
+    <form action="{{script_name}}/dump/create" method="post">
+    <p><input type="submit" value="Dump" /></p>
+    </form>
+    <br />
 
-<h2>Alterar Senha do Administrador</h2>
+    <h2>Restaurar Sistema</h2>
+    <form action="{{script_name}}/dump/restore" method="post" enctype="multipart/form-data">
+	    {% for field in restoredumpform %}
+		    <div class="fieldWrapper">
+                {{ field.errors }}
+                {{ field.label_tag }}: {{ field }}
+            </div>
+	    {% endfor %}
 
-<a href="{{script_name}}/password/new">Alterar Senha</a>
+    <p><input type="submit" value="Restore" /></p>
+    </form>
+{% endifequal %}
 
-	<hr />
+{% ifequal config_type 'password' %}
+    <h2>Alterar Senha do Administrador</h2>
 
-<!--  End Global Config -->
+    <a href="{{script_name}}/password/new">Alterar Senha</a>
+{% endifequal %}
 
 {% endblock %}
