--- a/trunk/templates/bkp/static/estilo.css
+++ b/trunk/templates/bkp/static/estilo.css
@@ -164,6 +164,31 @@ padding: 10px;
 font-weight: bold;
 }
 
+.menu_horizontal {
+width: 100%;
+overflow: hidden;
+height: 26px;
+z-index: 0;
+padding-bottom: 15px;
+}
+
+.menu_horizontal li {
+display: inline;
+}
+
+.menu_horizontal li a {
+display: block;
+float: left;
+padding: 5px 7px;
+height: 16px;
+background: #EEE;
+margin-right: 3px;
+}
+
+.menu_horizontal li a.ativo {
+background: #FAFAFA;
+}
+
 .titulo_botoes {
 width: 100%;
 overflow: hidden;
