+ Re-factored: edit definitions in all objects. Split in edit/update definitions + Removed: Legacy view objects definitions at views. + Removed: Legacy code of "statuses attributes" of Procedure + Removed: old unused view_procedure.html and new_restore.html files + Added: beta code for restore a successful existing job + Fixed: adding Schedule with Trigger at the same time + Fixed: many objects removal bugs + Fixed: many objects update bugs + Fixed: many objects creation bugs

--- a/trunk/templates/bkp/new_schedule.html
+++ b/trunk/templates/bkp/new_schedule.html
@@ -3,8 +3,6 @@
 
 <form action="{{script_name}}/computer/{{comp.id}}/procedure/{{proc.id}}/schedule/" method="post">
 	
-	<h3>Tipo Agendamento</h3>
-
     {% for field in schedform %}
         <div class="fieldWrapper">
             {{ field.errors }}
@@ -23,7 +21,8 @@
         </div>
     {% endfor %}
 
-    {% for field in procauxform %}
+
+    {% for field in schedauxform %}
 		{{ field }}
     {% endfor %}
 
