--- a/trunk/templates/bkp/edit_schedule.html
+++ b/trunk/templates/bkp/edit_schedule.html
@@ -1,18 +1,28 @@
 {% extends "bkp/base.html" %}
 {% block content %}
 
-<h2> Alterar Computador </h2>
+
+<h2> Alterar Agendamento </h2>
+
+<div class="bloco_texto">
+    <ul class="aux">
+        <li><strong class="label">Tipo:</strong> <span class="value">{{ sched.type }}</span></li>
+    </ul>
+</div>
 
 
-<form action="{{script_name}}/computer/{{comp.id}}/update" method="post">
-    {% for field in compform %}
+<form action="{{script_name}}/{{sched.update_url}}" method="post">
+	
+    {% for field in triggform %}
         <div class="fieldWrapper">
             {{ field.errors }}
             {{ field.label_tag }} {{ field }}
         </div>
     {% endfor %}
+
     <p><input type="submit" value="Salvar" /></p>
 </form>
+
 
 <a href="{{script_name}}/computer/{{comp.id}}">Cancelar</a>
 <br />
