--- a/trunk/templates/bkp/view_computer.html
+++ b/trunk/templates/bkp/view_computer.html
@@ -16,9 +16,18 @@
 	</div>
 	
 	<div class="bloco_texto">
+	    <div class="titulo_botoes">
+		<div class="botao_acoes">
+	        <form action="{{script_name}}/{{comp.run_test_url}}" method="post">
+	            <button type="submit"><span>Testar Conexão</span></button>
+	        </form>
+		</div>
+		</div>
+
 	    <ul class="aux">
 	        <li><strong class="label">IP:</strong> <span class="value">{{ comp.ip }}</span></li>
 	        <li><strong class="label">Descrição:</strong> <span class="value">{{ comp.description }}</span></li>
+	        <li><strong class="label">Status:</strong> <span class="value">Falta Implementar</span></li>
 	    </ul>
 	</div>
 
